--- a/css/midia.css
+++ b/css/midia.css
@@ -1,5 +1,57 @@
 @import url(../css/style.css);
 
+/* .midia__container {
+    width: 80%;
+    display: flex;
+    margin: 0 auto;
+    justify-content: center;
+    align-items: flex-start;
+    margin-bottom: 5rem;
+
+    .midia__text {
+        h2 {
+            font-size: 4rem;
+            color: var(--cor-vermelho);
+            font-family: Playfair Display, sans-serif;
+            font-weight: 500;
+            width: 65%;
+        }
+
+        p {
+            font-style: italic;
+            font-size: 1.5rem;
+            width: 80%;
+            margin-top: 2rem;
+        }
+    }
+
+    .midia__image {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        img.img-livro {
+            height: 500px;
+        }
+
+        img {
+            height: 270px;
+            margin-right: 2rem;
+        }
+
+        a {
+            text-transform: uppercase;
+            background-color: var(--cor-vermelho);
+            color: var(--cor-branco);
+            padding: 1rem 2rem;
+            border-radius: 5px;
+            margin-top: 2rem;
+        }
+    }
+
+} */
+
 .midia__container {
     width: 80%;
     display: flex;
@@ -50,4 +102,168 @@
         }
     }
 
+    @media screen and (max-width: 1600px) {
+        .midia__text {
+            h2 {
+                font-size: 3.5rem;
+                width: 70%;
+            }
+
+            p {
+                font-size: 1.4rem;
+                width: 85%;
+            }
+        }
+
+        .midia__image {
+            img.img-livro {
+                height: 450px;
+            }
+
+            img {
+                height: 250px;
+            }
+        }
+    }
+
+    @media screen and (max-width: 1400px) {
+        .midia__text {
+            h2 {
+                font-size: 3rem;
+                width: 75%;
+            }
+
+            p {
+                font-size: 1.3rem;
+                width: 90%;
+            }
+        }
+
+        .midia__image {
+            img.img-livro {
+                height: 400px;
+            }
+
+            img {
+                height: 230px;
+            }
+        }
+    }
+
+    @media screen and (max-width: 1200px) {
+        .midia__text {
+            h2 {
+                font-size: 2.5rem;
+                width: 80%;
+            }
+
+            p {
+                font-size: 1.2rem;
+                width: 95%;
+            }
+        }
+
+        .midia__image {
+            img.img-livro {
+                height: 350px;
+            }
+
+            img {
+                height: 210px;
+            }
+        }
+    }
+
+    @media screen and (max-width: 960px) {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+
+        .midia__text {
+            margin-top: 2rem;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+
+            h2 {
+                font-size: 2.2rem;
+                width: 90%;
+            }
+
+            p {
+                font-size: 1.2rem;
+                width: 100%;
+            }
+        }
+
+        .midia__image {
+            img.img-livro {
+                height: 300px;
+                margin-right: 0;
+            }
+
+            img {
+                height: 180px;
+                margin-right: 0;
+            }
+
+            a {
+                margin-top: 1.5rem;
+            }
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        .midia__text {
+            h2 {
+                font-size: 2rem;
+            }
+
+            p {
+                font-size: 1.1rem;
+            }
+        }
+
+        .midia__image {
+            img.img-livro {
+                height: 250px;
+            }
+
+            img {
+                height: 160px;
+            }
+        }
+    }
+
+    @media screen and (max-width: 480px) {
+        width: 100%;
+        padding: 0 1rem;
+
+        .midia__text {
+            h2 {
+                font-size: 1.8rem;
+            }
+
+            p {
+                font-size: 1rem;
+            }
+        }
+
+        .midia__image {
+            img.img-livro {
+                height: 200px;
+            }
+
+            img {
+                height: 140px;
+            }
+
+            a {
+                padding: 0.8rem 1.5rem;
+                font-size: 1rem;
+            }
+        }
+    }
 }
