--- a/css/visto.css
+++ b/css/visto.css
@@ -1,6 +1,6 @@
 @import url(../css/style.css);
 
-.tipos-de-visto {
+/* .tipos-de-visto {
     max-width: 55%;
     margin: 3rem auto;
     padding: 20px;
@@ -71,4 +71,124 @@
             }
         }
     }
+} */
+
+.tipos-de-visto {
+    max-width: 55%;
+    margin: 3rem auto;
+    padding: 20px;
+    text-align: left;
+
+    h1 {
+        font-family: Playfair Display, sans-serif;
+        font-weight: 500;
+        font-size: 5rem;
+        color: var(--cor-vermelho);
+        margin-bottom: 1rem;
+    }
+
+    p {
+        font-size: 20px;
+        margin-bottom: 100px;
+        font-style: italic;
+    }
+
+    .lista-visto {
+        display: flex;
+        gap: 40px;
+        margin-bottom: 3rem;
+        align-items: flex-start;
+
+        .imagem-visto {
+            margin-left: -130px;
+
+            img {
+                height: 50px;
+            }
+        }
+
+        .desc-visto {
+            h2.visto-title {
+                padding-block: .5rem;
+                width: fit-content;
+                font-family: Playfair Display, sans-serif;
+                font-weight: 500;
+                font-size: 2.8rem;
+                color: var(--cor-vermelho);
+                margin-bottom: 2rem;
+                margin-top: -10px;
+            }
+
+            .title-border {
+                border-block: 1px solid black;
+            }
+
+            h3.visto-subtitle {
+                font-size: 2.3rem;
+                font-family: Playfair Display, sans-serif;
+                font-weight: 400;
+                margin-bottom: 1rem;
+            }
+
+            p.visto-desc {
+                font-style: normal;
+                font-weight: 500;
+                margin-bottom: 10px;
+                width: fit-content;
+                color: black;
+            }
+
+            a {
+                text-decoration: underline;
+            }
+        }
+    }
 }
+
+@media (max-width: 768px) {
+    .tipos-de-visto {
+        max-width: 90%;
+        text-align: center;
+
+        h1 {
+            font-size: 4rem;
+        }
+
+        p {
+            font-size: 1.8rem;
+            margin-bottom: 50px;
+        }
+
+        .lista-visto {
+            flex-direction: column;
+            align-items: center;
+            gap: 20px;
+
+            .imagem-visto {
+                margin-left: 0;
+
+                img {
+                    height: 40px;
+                }
+            }
+
+            .desc-visto {
+                h2.visto-title {
+                    font-size: 2.4rem;
+                    margin: 0 auto;
+                }
+
+                h3.visto-subtitle {
+                    font-size: 2rem;
+                }
+
+                p.visto-desc {
+                    font-size: 1.6rem;
+                    margin: 0 auto;
+                }
+
+            }
+        }
+    }
+}
+
