--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@
     box-sizing: border-box;
     font-family: Montserrat, sans-serif;
     scroll-behavior: smooth;
+    scroll-padding: 200px;
 }
 
 a {
@@ -27,6 +28,13 @@ a {
 }
 
 .header {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: var(--cor-fundo-header);
+    z-index: 1000;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -66,6 +74,7 @@ a {
 
 /* Estilo Responsivo para Telas Menores (MENU) */
 @media (max-width: 1300px) {
+
     .header {
         padding-block: 1rem;
 
@@ -124,6 +133,7 @@ a {
 
 /* Banners Hero */
 .banner__hero {
+    padding-top: 130px;
     img {
         width: 100%;
     }
@@ -132,6 +142,7 @@ a {
 /* Banners Hero */
 
 .home__hero {
+    padding-top: 130px;
     background-color: var(--cor-bege);
 
     .hero__content {
@@ -610,6 +621,14 @@ footer {
 }
 
 @media screen and (max-width: 1300px) {
+
+    .home__hero {
+        padding-top: 80px;
+    }
+
+    .banner__hero {
+        padding-top: 80px;
+    }
 
     main {
 
